doc: Add TensorFlow implementation of content-based filtering section.

--- a/machine-learning/ml-specialization-coursera/course-3/notebooks/week2.ipynb
+++ b/machine-learning/ml-specialization-coursera/course-3/notebooks/week2.ipynb
@@ -719,6 +719,86 @@
    "cell_type": "markdown",
    "id": "a4bb156c",
    "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9d84e482",
+   "metadata": {},
+   "source": [
+    "## TensorFlow implementation of content-based filtering\n",
+    "\n",
+    "This section provides the technical implementation details for building a content-based filtering system using TensorFlow's Keras API, primarily focusing on defining the neural network architecture and the final model assembly.\n",
+    "\n",
+    "### Defining the Neural Networks\n",
+    "The user network and item (movie) network are implemented using Keras's Sequential model API, composed of dense layers:\n",
+    "\n",
+    "* **Architecture:** Both networks use multiple `Dense` layers with the **ReLU** activation function for hidden layers.\n",
+    "* **Output:** The final layer of both the user and item networks must have the same number of units (e.g., 32) to output the compact preference vectors, $\\mathbf{v}_u$ and $\\mathbf{v}_m$.\n",
+    "\n",
+    "    ```python\n",
+    "    # User neural network\n",
+    "    user_NN = tf.keras.models.Sequential(\n",
+    "        [tf.keras.layers.Dense(256, activation='relu'),\n",
+    "        tf.keras.layers.Dense(128, activation='relu'),\n",
+    "        tf.keras.layers.Dense(32)\n",
+    "        ]\n",
+    "    )\n",
+    "\n",
+    "    # Item neural network\n",
+    "    item_NN = tf.keras.models.Sequential(\n",
+    "        [tf.keras.layers.Dense(256, activation='relu'),\n",
+    "        tf.keras.layers.Dense(128, activation='relu'),\n",
+    "        tf.keras.layers.Dense(32)\n",
+    "        ]\n",
+    "    )\n",
+    "    ```\n",
+    "\n",
+    "### Feature Input and Vector Normalization\n",
+    "\n",
+    "The input features are fed into the respective networks, and an additional processing step is applied to the output vectors:\n",
+    "\n",
+    "* **Input Features:** User features ($\\mathbf{x}_u$) are fed into the user network, and item features ($\\mathbf{x}_m$) are fed into the item network.\n",
+    "* **Vector Normalization:** A crucial step for improved performance is normalizing the output vectors, $\\mathbf{v}_u$ and $\\mathbf{v}_m$, to have a length (L2 norm) equal to one. This is done using a function like `tf.linalg.l2_normalize`.\n",
+    "\n",
+    "    ```python\n",
+    "    # create the user input and point to the base network\n",
+    "    input_user = tf.keras.layers.Input(shape=(num_user_features))\n",
+    "    vu = user_NN(input_user)\n",
+    "    vu = tf.linalg.l2_normalize(vu, axis=1)\n",
+    "\n",
+    "    # create the item input and point to the base network\n",
+    "    input_item = tf.keras.layers.Input(shape=(num_item_features))\n",
+    "    vm = item_NN(input_item)\n",
+    "    vm = tf.linalg.l2_normalize(vm, axis=1)\n",
+    "    ```\n",
+    "\n",
+    "### Model Assembly (The Dot Product Layer)\n",
+    "The two separate networks are combined into a single Keras model:\n",
+    "\n",
+    "* **Dot Product Layer:** Keras provides a specialized layer, `tf.keras.layers.Dot`, to compute the dot product between the two output vectors ($\\mathbf{v}_u$ and $\\mathbf{v}_m$). This output is the final prediction ($\\hat{y}$).\n",
+    "* **Full Model Definition:** The overall Keras model is defined by specifying the model's inputs (user features and item features) and its final output (the dot product result).\n",
+    "\n",
+    "    ```python\n",
+    "    # measure the similarity of the two vector outputs\n",
+    "    output = tf.keras.layers.Dot(axes=1)([vu, vm])\n",
+    "\n",
+    "    # specify the inputs and output of the model\n",
+    "    model = Model([input_user, input_item], output)\n",
+    "    ```\n",
+    "\n",
+    "### Training\n",
+    "\n",
+    "* **Cost Function:** The model is trained using the Mean Squared Error (MSE) cost function, which is standard for predicting numerical ratings.\n",
+    "* **Optimization:** The entire assembled model is trained end-to-end to tune all parameters in both the user network and the item network simultaneously."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "214837b8",
+   "metadata": {},
    "source": []
   }
  ],
