doc: Add PCA algorithm section.

--- a/machine-learning/ml-specialization-coursera/course-3/notebooks/week2.ipynb
+++ b/machine-learning/ml-specialization-coursera/course-3/notebooks/week2.ipynb
@@ -881,6 +881,67 @@
    "cell_type": "markdown",
    "id": "7113825f",
    "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "51b97b25",
+   "metadata": {},
+   "source": [
+    "## PCA algorithm\n",
+    "\n",
+    "This section details how the Principal Components Analysis (PCA) algorithm mathematically works to achieve dimensionality reduction, contrasting it with linear regression and explaining the reconstruction step.\n",
+    "\n",
+    "### Preprocessing (Normalization)\n",
+    "\n",
+    "Before applying PCA, the data must be preprocessed:\n",
+    "* **Zero Mean:** Each feature must be normalized to have zero mean (subtract the mean from all data points).\n",
+    "* **Feature Scaling:** If features have very different scales (e.g., house size vs. number of bedrooms), feature scaling should also be performed so that the features have comparable ranges.\n",
+    "\n",
+    "### Finding the Principal Component\n",
+    "\n",
+    "* **Goal:** To find a new axis, $\\mathbf{z}$ (the principal component), that captures the most information from the original data.\n",
+    "* **Criterion:** PCA selects the axis $\\mathbf{z}$ such that when all original data points are projected onto it, the resulting projected points have the <u>largest possible variance</u> (are the most spread out).\n",
+    "* **Projection:** Projecting a point onto the new $\\mathbf{z}$-axis means finding its corresponding coordinate on that axis using a line segment that is at a 90-degree angle (perpendicular) to the $\\mathbf{z}$-axis.\n",
+    "\n",
+    "<img src='images/pca.png' width='750px'>\n",
+    "\n",
+    "### Multiple Principal Components\n",
+    "\n",
+    "If reducing the data to two dimensions ($\\mathbf{z}_1$ and $\\mathbf{z}_2$), the second principal component ($\\mathbf{z}_2$) is always chosen to be perpendicular (at $90^{\\circ}$) to the first principal component ($\\mathbf{z}_1$). Any subsequent principal component is chosen to be perpendicular to all previously chosen components.\n",
+    "\n",
+    "### Projection and Feature Reduction\n",
+    "\n",
+    "The direction of the principal component $\\mathbf{z}$ is represented by a **length 1 vector** ($\\mathbf{u}$). To find the new, reduced coordinate ($z$) for an original example ($\\mathbf{x}$), you compute the dot product between the original example vector and the length 1 direction vector:\n",
+    "\n",
+    "$$z = \\mathbf{x} \\cdot \\mathbf{u}$$\n",
+    "\n",
+    "### PCA vs. Linear Regression\n",
+    "\n",
+    "PCA is often confused with linear regression but is a distinct algorithm:\n",
+    "\n",
+    "| Feature | PCA (Unsupervised Learning) | Linear Regression (Supervised Learning) |\n",
+    "| :--- | :--- | :--- |\n",
+    "| **Goal** | Reduce the number of features/axes to represent the data. | Predict a specific target output variable ($y$). |\n",
+    "| **Data** | Unlabeled data ($\\mathbf{x}_1, \\mathbf{x}_2, \\dots$). | Labeled data ($\\mathbf{x}, y$). |\n",
+    "| **Fit Criterion** | Finds an axis that maximizes the variance of the projected data (or minimizes the perpendicular distance to the line). | Fits a line that minimizes the vertical distance between the line and the actual $y$ values. |\n",
+    "| **Feature Treatment** | All input features ($\\mathbf{x}_i$) are treated equally. | The target variable $y$ is given special treatment. |\n",
+    "\n",
+    "### Reconstruction\n",
+    "\n",
+    "The reconstruction step attempts to approximate the original, high-dimensional data ($\\mathbf{x}'$) using only the reduced, low-dimensional data ($z$). The approximated original vector ($\\mathbf{x}'$) is found by multiplying the reduced value ($z$) by the principal component's direction vector ($\\mathbf{u}$):\n",
+    "\n",
+    "$$\\mathbf{x}' \\approx z \\cdot \\mathbf{u}$$\n",
+    "\n",
+    "This provides the point on the $\\mathbf{z}$-axis that best approximates the original data point."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a74a76d8",
+   "metadata": {},
    "source": []
   }
  ],
