doc: Add bonus sections.

--- a/machine-learning/ml-specialization-coursera/course-3/notebooks/week2.ipynb
+++ b/machine-learning/ml-specialization-coursera/course-3/notebooks/week2.ipynb
@@ -979,6 +979,128 @@
    "cell_type": "markdown",
    "id": "4a857bdf",
    "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "98352ef1",
+   "metadata": {},
+   "source": [
+    "## Bonus 1: How to interpret PCA result?\n",
+    "\n",
+    "Interpreting the results of Principal Components Analysis (PCA) involves understanding how the new, compressed features (the principal components) relate back to the original features of your dataset.\n",
+    "\n",
+    "The interpretation focuses on two main areas: **Explained Variance** (how much information is retained) and **Component Loadings** (what the new components actually represent).\n",
+    "\n",
+    "\n",
+    "### Interpreting the Explained Variance Ratio\n",
+    "\n",
+    "The first step in interpreting PCA is deciding how many components to keep.\n",
+    "\n",
+    "| Component Statistic | What It Tells You | How to Use It |\n",
+    "| :--- | :--- | :--- |\n",
+    "| **Individual Explained Variance Ratio** | The percentage of the total dataset variance (information) captured by that specific principal component ($Z_k$). | $Z_1$ will always capture the largest amount of variance. The ratio typically decreases rapidly for subsequent components. |\n",
+    "| **Cumulative Explained Variance Ratio** | The total percentage of variance captured by all components up to that point ($Z_1 + Z_2 + \\dots + Z_k$). | You typically choose the smallest number of components ($k$) that still explain a high percentage of the total variance (e.g., 90% or 95%). |\n",
+    "\n",
+    "Use the explained variance to determine the optimal dimensionality reduction. If two components capture 90% of the variance, you can effectively visualize and analyze the data using just those two numbers while losing only 10% of the original information.\n",
+    "\n",
+    "### Interpreting the Component Loadings\n",
+    "\n",
+    "Each principal component ($Z$) is a linear combination (a weighted sum) of the original features ($X_1, X_2, \\dots, X_N$). The **component loadings** are the weights assigned to the original features. \n",
+    "\n",
+    "$$Z_k = (\\text{Weight}_1 \\cdot X_1) + (\\text{Weight}_2 \\cdot X_2) + \\dots + (\\text{Weight}_N \\cdot X_N)$$\n",
+    "\n",
+    "Understand the meaning of each principal component by examining the magnitude and sign of these weights.\n",
+    "\n",
+    "| Loading Characteristic | Interpretation | Example |\n",
+    "| :--- | :--- | :--- |\n",
+    "| **Large Absolute Value** | The original feature heavily contributes to and defines the component. | If a car dataset component ($Z_1$) has a high positive weight for Length and Height, $Z_1$ represents \"Overall Size.\" |\n",
+    "| **Opposite Signs** | The original features are inversely related within that component. | If a component ($Z_2$) has a high positive weight for Fuel Efficiency and a high negative weight for Engine Size, $Z_2$ represents the \"Efficiency vs. Power\" trade-off. |\n",
+    "| **Near Zero Value** | The original feature has little influence on the component's direction or definition. | If a feature like Number of Cupholders has a loading near zero on $Z_1$, it means cupholders are irrelevant to the concept of \"Overall Size.\" |\n",
+    "\n",
+    "#### Practical Steps for Interpretation:\n",
+    "\n",
+    "1.  **Examine the Loadings:** Focus on the original features that have the largest positive and negative loading values for the component you are analyzing ($Z_1$, $Z_2$, etc.).\n",
+    "2.  **Assign a Label:** Based on the features with the strongest loadings, give the component a meaningful, descriptive name. For instance, if $Z_2$ has high positive loadings on \"Life Expectancy\" and \"Education Rate,\" you might label it \"Human Development Index.\"\n",
+    "\n",
+    "### Interpreting the Data Plot (Visualization)\n",
+    "\n",
+    "If you reduce the data to two or three components for plotting, the visualization itself is a powerful tool for interpretation:\n",
+    "\n",
+    "* **Clustering:** Groups of data points (e.g., countries, cars) that cluster together in the $Z_1$ vs. $Z_2$ plot are similar to each other in terms of their original features.\n",
+    "* **Separation:** Data points that are far apart are dissimilar.\n",
+    "* **Outliers:** Points that lie far outside the main clusters in the PCA plot often represent outliers in the original high-dimensional space.\n",
+    "* **Trend:** The orientation of the data spread in the plot reflects the most significant trends (variance) in the original features."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b7c62439",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ce296352",
+   "metadata": {},
+   "source": [
+    "## Bonus 2: Feature reduction for ML models\n",
+    "\n",
+    "You can use Principal Components Analysis (PCA) to reduce the number of features for an ML model by transforming the original high-dimensional feature set into a smaller set of principal components, which retain most of the information (variance) present in the original data.\n",
+    "\n",
+    "This is a form of data compression that makes your subsequent ML model training faster and less prone to issues caused by high-dimensionality.\n",
+    "\n",
+    "### Steps to Use PCA for Feature Reduction\n",
+    "\n",
+    "The process involves training the PCA transformation on your training data and using the results to select the optimal number of features.\n",
+    "\n",
+    "#### 1\\. Preprocess and Fit PCA\n",
+    "\n",
+    "1.  **Feature Scaling:** Scale your original features (e.g., using standardization or normalization) so they have comparable ranges. This is critical for PCA when features have different scales (like GDP and age).\n",
+    "2.  **Fit PCA:** Fit the PCA model to your training data. You should initially fit the model to $D$ components, where $D$ is the original number of features.\n",
+    "    \n",
+    "    ```python\n",
+    "    # Initial fit to determine variance for all components\n",
+    "    pca = PCA(n_components=D)\n",
+    "    pca.fit(X_train_scaled)\n",
+    "    ```\n",
+    "\n",
+    "#### 2\\. Determine the Optimal Number of Components (K)\n",
+    "\n",
+    "The most important step is selecting the target dimensionality $K$. This is done by analyzing the Cumulative Explained Variance Ratio.\n",
+    "\n",
+    "Choose the smallest number of components ($K$) that explains a high percentage of the total variance (e.g., 90%, 95%, or 99%). Plot the cumulative explained variance against the number of components. The plot shows the trade-off between dimensionality reduction and information loss. You look for the \"elbow\" point where the curve starts to level off.\n",
+    "\n",
+    "$$\\text{Cumulative Variance}_K = \\sum_{k=1}^{K} (\\text{Explained Variance Ratio}_k)$$\n",
+    "\n",
+    "#### 3\\. Transform the Data\n",
+    "\n",
+    "Once $K$ is selected, you re-run the PCA or apply the transformation using the chosen $K$ components:\n",
+    "\n",
+    "1.  **Final PCA:** Instantiate a new PCA model with `n_components=K`.\n",
+    "2.  **Transform Data:** Apply the `.transform()` method to both your training set and your test set (and validation set).\n",
+    "\n",
+    "The output is your new feature set, $X'$, which has $K$ features. This reduced feature set is then used to train your final ML model.\n",
+    "\n",
+    "$$\\mathbf{X}_{\\text{original}} \\in \\mathbb{R}^{D} \\xrightarrow{\\text{PCA}} \\mathbf{X}'_{\\text{reduced}} \\in \\mathbb{R}^{K} \\quad \\text{where } K < D$$\n",
+    "\n",
+    "### Benefits for ML Model Building\n",
+    "\n",
+    "Historically, PCA was used to address computational and statistical challenges, though modern deep learning often mitigates the need for this step.\n",
+    "\n",
+    "* **Speeding Up Training:** By reducing the feature space, you significantly decrease the computational load for algorithms that scale poorly with high dimensionality, leading to faster training times.\n",
+    "* **Reducing Overfitting (Curse of Dimensionality):** In high-dimensional spaces with limited data, models can easily overfit to noise. PCA simplifies the feature space, effectively acting as a form of regularization that reduces complexity and combats the Curse of Dimensionality.\n",
+    "* **Removing Correlated Noise:** Since PCA finds orthogonal (perpendicular) components that capture variance, it naturally isolates redundant or highly correlated information into less important components, which are then discarded."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7e70b31c",
+   "metadata": {},
    "source": []
   }
  ],
