doc: Add Mars rover example.

--- a/machine-learning/ml-specialization-coursera/course-3/notebooks/week3.ipynb
+++ b/machine-learning/ml-specialization-coursera/course-3/notebooks/week3.ipynb
@@ -64,6 +64,58 @@
    "cell_type": "markdown",
    "id": "e5bda744",
    "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "686110fa",
+   "metadata": {},
+   "source": [
+    "## Mars rover example\n",
+    "\n",
+    "This section formalizes the core concepts of Reinforcement Learning (RL) using a simplified example inspired by the Mars rover, introducing the concepts of state, action, reward, and terminal states.\n",
+    "\n",
+    "### The Environment Setup (States and Rewards)\n",
+    "\n",
+    "* **States ($S$):** The environment is modeled as a sequence of six positions, $S_1$ through $S_6$, representing possible locations of the rover. The rover starts in $S_4$.\n",
+    "* **Rewards ($R$):** Rewards are associated with specific states based on their scientific value:\n",
+    "    * $R(S_1) = 100$ (Highest value, most interesting science).\n",
+    "    * $R(S_6) = 40$ (Second highest value).\n",
+    "    * $R(S_2) = R(S_3) = R(S_4) = R(S_5) = 0$.\n",
+    "* **Terminal States:** $S_1$ and $S_6$ are terminal states. Once the rover reaches these states, the day (or episode) ends, and no further rewards can be earned.\n",
+    "\n",
+    "### Actions and Transitions\n",
+    "\n",
+    "* **Actions ($A$):** At each step, the rover can choose one of two actions:\n",
+    "    * Go Left\n",
+    "    * Go Right\n",
+    "* **State Transition:** Taking an action leads the rover from the current state $S$ to a new state $S'$ (the next state). For example, from $S_4$, taking the action \"Go Left\" leads to the next state $S_3$.\n",
+    "\n",
+    "<img src='images/rl_example.png' width=600px>\n",
+    "\n",
+    "### The Core RL Loop Elements\n",
+    "\n",
+    "The fundamental process that defines the reinforcement learning problem is the sequence of transitions:\n",
+    "\n",
+    "At every time step, the robot is in a State ($\\mathbf{S}$), chooses an Action ($\\mathbf{A}$), receives the Reward ($\\mathbf{R}(S)$) associated with that state, and transitions to a Next State ($\\mathbf{S'}$).\n",
+    "\n",
+    "### Evaluating Action Sequences\n",
+    "\n",
+    "The goal of the RL algorithm is to figure out the optimal sequence of actions to maximize the total reward collected before reaching a terminal state.\n",
+    "\n",
+    "* **Option 1 (Go Left):** $S_4 \\to S_3 \\to S_2 \\to S_1$. Total Reward: $0 + 0 + 0 + 100 = 100$.\n",
+    "* **Option 2 (Go Right):** $S_4 \\to S_5 \\to S_6$. Total Reward: $0 + 0 + 40 = 40$.\n",
+    "* **Suboptimal Path:** $S_4 \\to S_5 \\to S_4 \\to \\dots$ (Wasting time by moving back and forth).\n",
+    "\n",
+    "The algorithm must learn to choose the path (policy) that yields the highest cumulative return."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "104f54d1",
+   "metadata": {},
    "source": []
   }
  ],
