doc: Add The return in reinforcement learning section.

--- a/machine-learning/ml-specialization-coursera/course-3/notebooks/week3.ipynb
+++ b/machine-learning/ml-specialization-coursera/course-3/notebooks/week3.ipynb
@@ -116,6 +116,52 @@
    "cell_type": "markdown",
    "id": "104f54d1",
    "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3246384e",
+   "metadata": {},
+   "source": [
+    "## The return in reinforcement learning\n",
+    "\n",
+    "The section explains the critical Reinforcement Learning (RL) concept of the **Return**, which is used to evaluate the desirability of a sequence of rewards by introducing a **Discount Factor ($\\gamma$)**.\n",
+    "\n",
+    "### Defining the Return ($G$)\n",
+    "\n",
+    "The Return is the single number used to quantify the total cumulative value of a sequence of rewards ($R_1, R_2, R_3, \\dots$) that an agent receives over an episode.\n",
+    "* **Analogy:** It captures the idea that a smaller, immediate reward (like a \\$5 bill now) might be more attractive than a larger reward that takes significant time and effort to obtain (like a \\$10 bill across town).\n",
+    "* **Goal:** The primary objective of an RL algorithm is to find a policy (set of actions) that maximizes the expected Return.\n",
+    "\n",
+    "### The Discount Factor ($\\gamma$)\n",
+    "\n",
+    "The discount factor, $\\gamma$ (gamma), is a number between 0 and 1 (often close to 1, like 0.9 or 0.99) used to weigh future rewards. It makes the RL algorithm **\"impatient\"** by reducing the value of rewards received later in time. Rewards received sooner contribute more to the total Return.\n",
+    "\n",
+    "### The Return Formula\n",
+    "\n",
+    "The return ($G$) is calculated as the sum of all future rewards, where each successive reward is discounted by an increasing power of $\\gamma$:\n",
+    "\n",
+    "$$G = R_1 + \\gamma R_2 + \\gamma^2 R_3 + \\gamma^3 R_4 + \\dots$$\n",
+    "\n",
+    "* The first reward ($R_1$) is given full credit ($1 \\cdot R_1$).\n",
+    "* The second reward ($R_2$) is multiplied by $\\gamma$.\n",
+    "* The third reward ($R_3$) is multiplied by $\\gamma^2$, and so on.\n",
+    "\n",
+    "### Interpretation and Practical Effects\n",
+    "\n",
+    "* **Financial Interpretation:** In applications like financial trading, $\\gamma$ often represents the time value of money or the interest rate, meaning a dollar today is worth more than a dollar in the future.\n",
+    "* **Handling Negative Rewards:** If the system incurs negative rewards (costs or penalties), the discount factor incentivizes the algorithm to push these negative outcomes as far into the future as possible, minimizing their discounted impact on the total Return.\n",
+    "* **Policy Dependence:** The Return obtained from any given state depends entirely on the actions (policy) the agent chooses. In the rover example, choosing \"Go Left\" yielded a higher Return (12.5) than choosing \"Go Right\" (10) from the starting state $S_4$.\n",
+    "\n",
+    "<img src='images/rl_return.png' width='700px'>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fd5accbf",
+   "metadata": {},
    "source": []
   }
  ],
