doc: Add Making decisions: Policies in reinforcement learning section.

--- a/machine-learning/ml-specialization-coursera/course-3/notebooks/week3.ipynb
+++ b/machine-learning/ml-specialization-coursera/course-3/notebooks/week3.ipynb
@@ -162,6 +162,45 @@
    "cell_type": "markdown",
    "id": "fd5accbf",
    "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5e219ff2",
+   "metadata": {},
+   "source": [
+    "## Making decisions: Policies in reinforcement learning\n",
+    "\n",
+    "This section explains the final formalized concept of Reinforcement Learning (RL): the **Policy ($\\pi$)**, which is the core output of any RL algorithm.\n",
+    "\n",
+    "### Definition of the Policy ($\\pi$)\n",
+    "\n",
+    "The policy ($\\pi$) is a function that serves as the \"brain\" or \"controller\" for the reinforcement learning agent. It takes the current State ($\\mathbf{s}$) as input and reliably outputs the recommended Action ($\\mathbf{a}$) that the agent should take in that state.\n",
+    "\n",
+    "$$\\pi(\\mathbf{s}) \\longrightarrow \\mathbf{a}$$\n",
+    "\n",
+    "### The Goal of Reinforcement Learning\n",
+    "\n",
+    "The ultimate objective of any reinforcement learning algorithm is to find the optimal policy ($\\pi^{*}$). This is the policy that, when followed, guarantees the maximum possible **Return** (the discounted sum of future rewards) for the agent from every starting state.\n",
+    "\n",
+    "### Policy Examples (Rover)\n",
+    "\n",
+    "A policy defines a decision for every possible state:\n",
+    "* *Example Policy:*\n",
+    "    * If in State 2, go **Left**.\n",
+    "    * If in State 3, go **Left**.\n",
+    "    * If in State 4, go **Left**.\n",
+    "    * If in State 5, go **Right**.\n",
+    "\n",
+    "The algorithm must explore and learn to define the best action for every state to maximize the cumulative rewards."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d503d3d4",
+   "metadata": {},
    "source": []
   }
  ],
