doc: Add Review of key concepts section.

--- a/machine-learning/ml-specialization-coursera/course-3/notebooks/week3.ipynb
+++ b/machine-learning/ml-specialization-coursera/course-3/notebooks/week3.ipynb
@@ -201,6 +201,50 @@
    "cell_type": "markdown",
    "id": "d503d3d4",
    "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0f3c349f",
+   "metadata": {},
+   "source": [
+    "\n",
+    "## Review of key concepts\n",
+    "\n",
+    "This section provides a concise review of the fundamental components of Reinforcement Learning (RL) using the formalism known as a **Markov Decision Process (MDP)**.\n",
+    "\n",
+    "### Core RL Components Reviewed\n",
+    "\n",
+    "The formalism requires defining five key elements for any application:\n",
+    "\n",
+    "* **States ($\\mathbf{S}$):** All possible configurations or situations of the environment (e.g., the rover's position, the helicopter's position/orientation, or the configuration of pieces on a chessboard).\n",
+    "* **Actions ($\\mathbf{A}$):** The set of all possible decisions or moves the agent can make from any given state (e.g., \"go left/right\" for the rover, or moving a specific control stick for the helicopter).\n",
+    "* **Rewards ($\\mathbf{R}$):** A function that assigns a positive or negative numerical value to a state or an action, telling the agent when it is performing well or poorly (e.g., $+1$ for winning a game, $-1$ for losing).\n",
+    "* **Discount Factor ($\\gamma$):** A value (usually $0 < \\gamma < 1$) used to compute the Return, which makes the agent prioritize immediate rewards over future rewards.\n",
+    "* **Return ($\\mathbf{G}$):** The cumulative discounted sum of all future rewards, which the policy attempts to maximize.\n",
+    "* **Policy ($\\pi$):** The function that maps a State ($\\mathbf{S}$) to the optimal Action ($\\mathbf{A}$) to maximize the Return.\n",
+    "\n",
+    "### The Formalism: Markov Decision Process (MDP)\n",
+    "\n",
+    "The entire framework comprising the states, actions, transitions, and rewards is known as a **Markov Decision Process (MDP)**. The Markov term means that the future only depends on the current state and action, and not on the history of states or actions that led to the current state. The MDP describes the interaction between the **Agent** and the **Environment** \n",
+    "\n",
+    "<img src='images/rl.png' width=500px>\n",
+    "\n",
+    "1.  The Agent uses the **Policy ($\\pi$)** to choose an **Action ($\\mathbf{A}$)**.\n",
+    "2.  The Action changes the **Environment**.\n",
+    "3.  The Environment returns a new **State ($\\mathbf{S'}$)** and a **Reward ($\\mathbf{R}$)**.\n",
+    "\n",
+    "### Next Step: The State-Action Value Function\n",
+    "\n",
+    "In the next section, we will introduce the **State-Action Value Function** (or Q-function) as the next key concept necessary for developing algorithms to actually find the optimal policy."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "430fedf5",
+   "metadata": {},
    "source": []
   }
  ],
